FIX: Safari iOS regex look-behind bug. <br> - Refactor of BibleUp Regex - Refactor of `setLinkMarkup` - Feature: Support multiple chapter-level references - Feature: Support multiple version tagging on a single reference

--- a/bibleup/css/bibleup.less
+++ b/bibleup/css/bibleup.less
@@ -13,7 +13,7 @@
 	-webkit-text-size-adjust: 100%;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	z-index: 1070; //bootstrap default for popovers
-	
+
 
 	.bu-popup-content ol li {
 		font-size: 15px;
@@ -40,7 +40,7 @@
 	font-weight: bold;
 	text-align: right;
 	font-size: 13px;
-	padding: 10px;
+	padding: 7px 10px;
 	color: #8c8c8c;
 }
 
