--- a/bibleup/css/classic.less
+++ b/bibleup/css/classic.less
@@ -22,7 +22,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 7px 10px;
 
     .bu-popup-version {
       background: #f2f2f2;
